sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:5: error: value >- is not a member of Int
  while (e &&(n>-1)) 
               ^